--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/nathan-lap-main/python/Pyinstruments/pyinvenv/bin/python3"
+    "python.pythonPath": "/usr/bin/python3"
 }
