--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,6 +27,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run format
       run: |
+        pip3 install black
         make format
     - name: Check for formatting errors
       run: |
