--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
+          pip3 install -e .
           pip3 install pylint
       - name: Check for syntax errors with pylint
         run: |
