Format changes made and is_on function added

--- a/yinstruments/.vscode/settings.json
+++ b/yinstruments/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnType": true,
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "black",
+    "python.formatting.blackArgs": [
+        "-l",
+        "100"
+    ],
 }
