--- a/.github/Makefile
+++ b/.github/Makefile
@@ -2,6 +2,7 @@ IN_ENV := . .venv/bin/activate;
 
 env:
 	python3 -m venv .venv
+	$(IN_ENV) pip install packaging
 
 check_version_increase:
 	$(IN_ENV) pip uninstall -y yinstruments
